# pyxis-parcel

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: main.yml
src/: error.rs  inode.rs  lib.rs  metadata.rs  parcel.rs  reader_writer.rs
tests/: 0001-create-add.rs  0001.rs  0002-read-write.rs  0003-space-management.rs  many_files.rs
tests/common/: mod.rs
tests/data/expected/: add_char.parcel  add_dir.parcel  add_file.parcel  add_multiple_files.parcel  add_reload_add.parcel  add_reload_delete.parcel  add_symlink.parcel  empty_serialize.parcel  insert_dir_dirent.parcel  insert_file_dirent.parcel  read_flush.parcel  realloc_create.parcel  realloc_first.parcel  realloc_last.parcel  realloc_middle.parcel  write.parcel
