[package]
name = "parcel"
version = "0.1.0"
authors = ["chordtoll <git@chordtoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
walkdir = "2.3.2"
fuse = { git = "https://github.com/delehef/fuse-rs.git" }
serde_yaml = "0.8.17"
serde =  { version = "1.0.125", features = ["derive"] }
indoc = "1.0.3"
lexiclean = "0.0.1"
xattr = "0.2.2"
fork = "0.1.18"
global = "0.4.3"
libc = "0.2.93"