[package]
name = "pyxis-parcel"
version = "0.1.2"
authors = ["chordtoll <git@chordtoll.com>"]
edition = "2021"
description = "Utilities and library to manipulate parcel archives for the pyxis package manager"
license = "MIT"
repository = "https://github.com/chordtoll/pyxis-parcel"

[package.metadata.arch]
arch = ["x86_64"]

[dependencies]
clap = "2.33.3"
walkdir = "2.3.2"
fuser = "0.9.1"
serde_yaml = "0.8.21"
serde =  { version = "1.0.130", features = ["derive"] }
lexiclean = "0.0.1"
xattr = "0.2.2"
fork = "0.1.18"
global = "0.4.3"
libc = "0.2.108"
