[package]
name = "pyxis-parcel"
version = "0.3.0"
authors = ["chordtoll <git@chordtoll.com>"]
edition = "2021"
description = "Utilities and library to manipulate parcel archives for the pyxis package manager"
license = "MIT"
repository = "https://github.com/chordtoll/pyxis-parcel"

[package.metadata.arch]
arch = ["x86_64"]

[dependencies]
clap = "2.34.0"
walkdir = "2.3.2"
serde_yaml = "0.8.21"
serde =  { version = "1.0.131", features = ["derive"] }
lexiclean = "0.0.1"
xattr = "0.2.2"
fork = "0.1.18"
global = "0.4.3"
libc = "0.2.109"
anyhow = { version = "1.0.51", features = ["backtrace"] }
thiserror = "1.0.30"

[dev-dependencies]
tempfile = "3.2.0"
pretty_assertions = "1.0.0"
quickcheck = "1.0.3"
rand = "0.8.4"
rand_pcg = "0.3.1"
